Fixed drag and drop on XYChart worksheet legend pane does not support multiple selection.